@@ -15,6 +15,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix spoilers generation. giftrans is now disabled.
+ doc/playbook-html/Makefile.am
+ doc/scripts/Makefile.in makeps.pl
+ doc/spoiler/Makefile.am
+ doc/spoiler-html/spoiler.html: removed as it's generated by make archive
+Nicolas Weeger 2007-07-15
+
 server/skills.c: Fix crash - using incorrect map pointer in call
   to get_map_ob
 MSW 2007-07-11
